Reorganized Jenkinsfile
- separated admin, application, embedded tests
- reorganized Ant tests to groups (looks better on pipeline view)

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>